<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splashContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/baseBackground">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/splash_animation" />

    <TextView
        android:id="@+id/loadingDisclaimerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/x4"
        android:visibility="gone"
        android:textStyle="bold"
        android:fontFamily="@font/sora_bold"
        android:textColor="?attr/secondaryBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".8"
        android:text="@string/launch_screen_loading_title"/>

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x4"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/loadingDisclaimerTextView"
        app:layout_constraintStart_toStartOf="@+id/loadingDisclaimerTextView"
        app:layout_constraintTop_toBottomOf="@+id/loadingDisclaimerTextView" />

    <LinearLayout
        android:id="@+id/walletRecoveryPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/x4"
        android:background="?attr/secondaryBackground"
        android:orientation="vertical"
        android:padding="@dimen/x4"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sora_bold"
            android:text="@string/wallet_upgrade_recovery_title"
            android:textColor="?attr/contentPrimary"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x2"
            android:text="@string/wallet_upgrade_recovery_message"
            android:textColor="?attr/contentPrimary" />

        <TextView
            android:id="@+id/walletRecoveryCodeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x2"
            android:textColor="?attr/contentPrimary"
            tools:text="Recovery code: SECRET_DECRYPTION_FAILED" />

        <Button
            android:id="@+id/retryWalletMigrationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x4"
            android:text="@string/wallet_upgrade_recovery_retry" />

        <Button
            android:id="@+id/exportWalletRecoveryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x2"
            android:text="@string/wallet_upgrade_recovery_export" />

        <Button
            android:id="@+id/continueLegacyWalletButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x2"
            android:text="@string/wallet_upgrade_recovery_continue_legacy"
            android:visibility="gone" />

        <Button
            android:id="@+id/contactWalletSupportButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x2"
            android:text="@string/wallet_upgrade_recovery_support" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
